--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "strict": true,
-        "module": "commonjs",
+        "module": "ES2020",
         "target": "ES2020",
         "esModuleInterop": true,
         "sourceMap": true,
