Update repository to GitHub URL

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.ebacher-skemp.com/jamesskemp/chrome-extension-template.git"
+    "url": "https://github.com/JamesSkemp/chrome-extension-template.git"
   },
   "author": "James Skemp",
   "license": "CC0",
